--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Max Eat'Fit - Nutrition Sportive</title>
+
+    <!-- Balise de validation Google -->
+    <meta name="google-site-verification" content="llN5KYHB9OPeR57S9bL89veqs8ca7P_TsMLj85rit-0" />
+
   </head>
   <body>
     <div id="root"></div>
